Implement 4-column layout for Featured Yarns section - Add Feather Light yarn and responsive grid

--- a/index.html
+++ b/index.html
@@ -61,6 +61,14 @@ description: Luxuriously soft cashmere yarn from Inner Mongolia - Nature in Ever
                 </div>
             </div>
             <div class="yarn-card">
+                <img src="{{ '/assets/images/feather-light-yarn.jpg' | relative_url }}" alt="Feather Light Yarn">
+                <div class="yarn-card-content">
+                    <h3>Feather Light</h3>
+                    <p class="ply">68-ply</p>
+                    <p>A fine, lightweight yarn that's great for delicate projects and summer garments.</p>
+                </div>
+            </div>
+            <div class="yarn-card">
                 <img src="{{ '/assets/images/natural-yarn.jpg' | relative_url }}" alt="Natural Yarn">
                 <div class="yarn-card-content">
                     <h3>Natural</h3>
