Complete image integration and story page enhancement - Update all image paths, redesign story page with new content blocks, add CSS for new elements, improve responsive design

--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@ description: Luxuriously soft cashmere yarn from Inner Mongolia - Nature in Ever
     <div class="container">
         <div class="three-columns">
             <div class="column">
-                <img src="{{ '/assets/images/who-we-are.jpg' | relative_url }}" alt="Who We Are">
+                <img src="{{ '/assets/images/home page pic/who-we-are-600x400.png' | relative_url }}" alt="Who We Are">
                 <h3>Who We Are</h3>
                 <p>Discover our commitment to quality and sustainability</p>
             </div>
             <div class="column">
-                <img src="{{ '/assets/images/our-cashmere.jpg' | relative_url }}" alt="Our Cashmere">
+                <img src="{{ '/assets/images/home page pic/our-cashmere-600x400.png' | relative_url }}" alt="Our Cashmere">
                 <h3>Our Cashmere</h3>
                 <p>Learn how our premium cashmere is sourced</p>
             </div>
             <div class="column">
-                <img src="{{ '/assets/images/yarn-collection-preview.jpg' | relative_url }}" alt="Yarn Collection">
+                <img src="{{ '/assets/images/home page pic/yarn collection.png' | relative_url }}" alt="Yarn Collection">
                 <h3>Yarn Collection</h3>
                 <p>Explore our range of natural cashmere yarns</p>
             </div>
@@ -45,7 +45,7 @@ description: Luxuriously soft cashmere yarn from Inner Mongolia - Nature in Ever
         <h2 class="section-title">Featured Yarns</h2>
         <div class="yarn-grid">
             <div class="yarn-card">
-                <img src="{{ '/assets/images/light-taupe-yarn.jpg' | relative_url }}" alt="Light Taupe Yarn">
+                <img src="{{ '/assets/images/home page pic/light.png' | relative_url }}" alt="Light Taupe Yarn">
                 <div class="yarn-card-content">
                     <h3>Light Taupe</h3>
                     <p class="ply">12-ply</p>
@@ -53,7 +53,7 @@ description: Luxuriously soft cashmere yarn from Inner Mongolia - Nature in Ever
                 </div>
             </div>
             <div class="yarn-card">
-                <img src="{{ '/assets/images/hazelnut-yarn.jpg' | relative_url }}" alt="Hazelnut Yarn">
+                <img src="{{ '/assets/images/home page pic/hazelnut.png' | relative_url }}" alt="Hazelnut Yarn">
                 <div class="yarn-card-content">
                     <h3>Hazelnut</h3>
                     <p class="ply">26-ply</p>
@@ -61,7 +61,7 @@ description: Luxuriously soft cashmere yarn from Inner Mongolia - Nature in Ever
                 </div>
             </div>
             <div class="yarn-card">
-                <img src="{{ '/assets/images/feather-light-yarn.jpg' | relative_url }}" alt="Feather Light Yarn">
+                <img src="{{ '/assets/images/home page pic/ChatGPT Image May 25, 2025, 04_31_21 PM.png' | relative_url }}" alt="Feather Light Yarn">
                 <div class="yarn-card-content">
                     <h3>Feather Light</h3>
                     <p class="ply">68-ply</p>
@@ -69,7 +69,7 @@ description: Luxuriously soft cashmere yarn from Inner Mongolia - Nature in Ever
                 </div>
             </div>
             <div class="yarn-card">
-                <img src="{{ '/assets/images/natural-yarn.jpg' | relative_url }}" alt="Natural Yarn">
+                <img src="{{ '/assets/images/home page pic/natural.png' | relative_url }}" alt="Natural Yarn">
                 <div class="yarn-card-content">
                     <h3>Natural</h3>
                     <p class="ply">100-ply</p>
