--- a/yarn-collection/index.html
+++ b/yarn-collection/index.html
@@ -11,7 +11,7 @@ description: Explore our range of natural cashmere yarns from Inner Mongolia
         <div class="yarn-collection-grid">
             <!-- A Soft & Bold - 12-ply -->
             <div class="yarn-collection-item">
-                <img src="{{ '/assets/images/soft-bold-yarn.jpg' | relative_url }}" alt="A Soft & Bold 12-ply Yarn">
+                <img src="{{ '/assets/images/yarn collection pic/12支.jpg' | relative_url }}" alt="A Soft & Bold 12-ply Yarn">
                 <div class="yarn-collection-content">
                     <h3>A Soft & Bold</h3>
                     <p class="ply">12-ply</p>
@@ -22,7 +22,7 @@ description: Explore our range of natural cashmere yarns from Inner Mongolia
 
             <!-- Everyday Luxury - 26-ply -->
             <div class="yarn-collection-item">
-                <img src="{{ '/assets/images/everyday-luxury-yarn.jpg' | relative_url }}" alt="Everyday Luxury 26-ply Yarn">
+                <img src="{{ '/assets/images/yarn collection pic/26支.png' | relative_url }}" alt="Everyday Luxury 26-ply Yarn">
                 <div class="yarn-collection-content">
                     <h3>Everyday Luxury</h3>
                     <p class="ply">26-ply</p>
@@ -33,7 +33,7 @@ description: Explore our range of natural cashmere yarns from Inner Mongolia
 
             <!-- Feather Light - 68-ply -->
             <div class="yarn-collection-item">
-                <img src="{{ '/assets/images/feather-light-yarn.jpg' | relative_url }}" alt="Feather Light 68-ply Yarn">
+                <img src="{{ '/assets/images/yarn collection pic/68支.png' | relative_url }}" alt="Feather Light 68-ply Yarn">
                 <div class="yarn-collection-content">
                     <h3>Feather Light</h3>
                     <p class="ply">68-ply</p>
@@ -44,7 +44,7 @@ description: Explore our range of natural cashmere yarns from Inner Mongolia
 
             <!-- Supreme Edition - 100-ply -->
             <div class="yarn-collection-item">
-                <img src="{{ '/assets/images/supreme-edition-yarn.jpg' | relative_url }}" alt="Supreme Edition 100-ply Yarn">
+                <img src="{{ '/assets/images/yarn collection pic/100ply-yarn-600x400.png' | relative_url }}" alt="Supreme Edition 100-ply Yarn">
                 <div class="yarn-collection-content">
                     <h3>Supreme Edition</h3>
                     <p class="ply">100-ply</p>
