Complete story page redesign with fixed hero image, enhanced visual layout, and improved content organization

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ description: Luxuriously soft cashmere yarn from Inner Mongolia - Nature in Ever
         <h2 class="section-title">Featured Yarns</h2>
         <div class="yarn-grid">
             <div class="yarn-card">
-                <img src="{{ '/assets/images/yarn collection pic/12支.jpg' | relative_url }}" alt="Light Taupe Yarn">
+                <img src="{{ '/assets/images/home page pic/light.png' | relative_url }}" alt="Light Taupe Yarn">
                 <div class="yarn-card-content">
                     <h3>Light Taupe</h3>
                     <p class="ply">12-ply</p>
@@ -53,7 +53,7 @@ description: Luxuriously soft cashmere yarn from Inner Mongolia - Nature in Ever
                 </div>
             </div>
             <div class="yarn-card">
-                <img src="{{ '/assets/images/yarn collection pic/26支.png' | relative_url }}" alt="Hazelnut Yarn">
+                <img src="{{ '/assets/images/home page pic/hazelnut.png' | relative_url }}" alt="Hazelnut Yarn">
                 <div class="yarn-card-content">
                     <h3>Hazelnut</h3>
                     <p class="ply">26-ply</p>
@@ -61,7 +61,7 @@ description: Luxuriously soft cashmere yarn from Inner Mongolia - Nature in Ever
                 </div>
             </div>
             <div class="yarn-card">
-                <img src="{{ '/assets/images/yarn collection pic/68支.png' | relative_url }}" alt="Feather Light Yarn">
+                <img src="{{ '/assets/images/home page pic/ChatGPT Image May 25, 2025, 04_31_21 PM.png' | relative_url }}" alt="Feather Light Yarn">
                 <div class="yarn-card-content">
                     <h3>Feather Light</h3>
                     <p class="ply">68-ply</p>
@@ -69,7 +69,7 @@ description: Luxuriously soft cashmere yarn from Inner Mongolia - Nature in Ever
                 </div>
             </div>
             <div class="yarn-card">
-                <img src="{{ '/assets/images/yarn collection pic/100ply-yarn-600x400.png' | relative_url }}" alt="Natural Yarn">
+                <img src="{{ '/assets/images/home page pic/natural.png' | relative_url }}" alt="Natural Yarn">
                 <div class="yarn-card-content">
                     <h3>Natural</h3>
                     <p class="ply">100-ply</p>
