Shorten 'What We Make' section content and remove emojis from 'Why We Do It' section

--- a/story/index.html
+++ b/story/index.html
@@ -39,24 +39,24 @@ description: Responsibly sourced Inner Mongolian cashmere - From the Grasslands 
             <div class="story-text">
                 <h2>What We Make</h2>
                 <p class="story-intro">At Woolara, we focus on one thing and do it best: 100% pure Inner Mongolian cashmere yarn.</p>
-                <p>Available in multiple ply counts and a full spectrum of colors, each yarn is carefully crafted to retain the natural softness, resilience, and warmth of raw cashmere.</p>
+                <p>Available in multiple ply counts, each yarn retains the natural softness and warmth of raw cashmere.</p>
                 
                 <div class="yarn-specs-grid">
                     <div class="spec-card">
                         <h4>12s – Everyday Luxury</h4>
-                        <p>Light yet warm, perfect for cozy essentials and everyday comfort.</p>
+                        <p>Light yet warm, perfect for cozy essentials.</p>
                     </div>
                     <div class="spec-card">
                         <h4>26s – Classic Balance</h4>
-                        <p>Versatile for both garments and accessories with perfect drape.</p>
+                        <p>Versatile for garments and accessories.</p>
                     </div>
                     <div class="spec-card">
                         <h4>68s – Soft Sophistication</h4>
-                        <p>Delicate and refined, ideal for finer detailing and luxury pieces.</p>
+                        <p>Delicate and refined for luxury pieces.</p>
                     </div>
                     <div class="spec-card">
                         <h4>100s – Feather-Light Lace</h4>
-                        <p>The ultimate in cashmere luxury, offering unparalleled softness and elegance.</p>
+                        <p>The ultimate in cashmere luxury and elegance.</p>
                     </div>
                 </div>
             </div>
@@ -75,17 +75,14 @@ description: Responsibly sourced Inner Mongolian cashmere - From the Grasslands 
                 
                 <div class="values-grid">
                     <div class="value-card">
-                        <span class="emoji">🐐</span>
                         <h4>Ethical Sourcing</h4>
                         <p>We work directly with independent herders in Inner Mongolia who comb goats gently by hand each spring, ensuring animal welfare at every step.</p>
                     </div>
                     <div class="value-card">
-                        <span class="emoji">🧶</span>
                         <h4>Slow Fashion</h4>
                         <p>We promote slow fashion principles and empower handcraft communities around the world through fair trade practices.</p>
                     </div>
                     <div class="value-card">
-                        <span class="emoji">✨</span>
                         <h4>Quality Assurance</h4>
                         <p>We insist on complete traceability, rigorous quality control, and sustainable practices at every step of our supply chain.</p>
                     </div>
