Remove specified images, make yarn collection boxes fully clickable, and create coming soon page for crowdfunding

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ description: Luxuriously soft cashmere yarn from Inner Mongolia - Nature in Ever
         <p>Luxuriously soft cashmere yarn from Inner Mongolia</p>
         <div class="cta-buttons">
             <a href="{{ '/yarn-collection/' | relative_url }}" class="btn btn-primary">Explore Yarn</a>
-            <a href="https://your-crowdfunding-link.com" class="btn btn-secondary">Join Crowdfunding</a>
+            <a href="{{ '/coming-soon/' | relative_url }}" class="btn btn-secondary">Join Crowdfunding</a>
         </div>
     </div>
 </section>
@@ -89,6 +89,6 @@ description: Luxuriously soft cashmere yarn from Inner Mongolia - Nature in Ever
             <div class="progress-fill"></div>
         </div>
         <div class="progress-text">51%</div>
-        <a href="https://your-crowdfunding-link.com" class="btn btn-primary" style="margin-top: 30px;">Back Woolara</a>
+        <a href="{{ '/coming-soon/' | relative_url }}" class="btn btn-primary" style="margin-top: 30px;">Back Woolara</a>
     </div>
 </section> 
