--- a/yarn-collection/index.html
+++ b/yarn-collection/index.html
@@ -10,48 +10,44 @@ description: Explore our range of natural cashmere yarns from Inner Mongolia
         
         <div class="yarn-collection-grid">
             <!-- A Soft & Bold - 12-ply -->
-            <div class="yarn-collection-item">
+            <a href="{{ '/yarns/soft-bold/' | relative_url }}" class="yarn-collection-item">
                 <img src="{{ '/assets/images/yarn collection pic/12支.jpg' | relative_url }}" alt="A Soft & Bold 12-ply Yarn">
                 <div class="yarn-collection-content">
                     <h3>A Soft & Bold</h3>
                     <p class="ply">12-ply</p>
                     <p>Our thickest and softest yarn, ideal for quick-to-knit projects.</p>
-                    <a href="{{ '/yarns/soft-bold/' | relative_url }}" class="btn btn-primary">Explore 12-Ply</a>
                 </div>
-            </div>
+            </a>
 
             <!-- Everyday Luxury - 26-ply -->
-            <div class="yarn-collection-item">
+            <a href="{{ '/yarns/everyday-luxury/' | relative_url }}" class="yarn-collection-item">
                 <img src="{{ '/assets/images/yarn collection pic/26支.png' | relative_url }}" alt="Everyday Luxury 26-ply Yarn">
                 <div class="yarn-collection-content">
                     <h3>Everyday Luxury</h3>
                     <p class="ply">26-ply</p>
                     <p>A classic, all-purpose yarn that's perfect for garments and accessories.</p>
-                    <a href="{{ '/yarns/everyday-luxury/' | relative_url }}" class="btn btn-primary">Explore 25-Ply</a>
                 </div>
-            </div>
+            </a>
 
             <!-- Feather Light - 68-ply -->
-            <div class="yarn-collection-item">
+            <a href="{{ '/yarns/feather-light/' | relative_url }}" class="yarn-collection-item">
                 <img src="{{ '/assets/images/yarn collection pic/68支.png' | relative_url }}" alt="Feather Light 68-ply Yarn">
                 <div class="yarn-collection-content">
                     <h3>Feather Light</h3>
                     <p class="ply">68-ply</p>
                     <p>A fine, lightweight yarn that's great for delicate projects and summer garments.</p>
-                    <a href="{{ '/yarns/feather-light/' | relative_url }}" class="btn btn-primary">Explore 68-Ply</a>
                 </div>
-            </div>
+            </a>
 
             <!-- Supreme Edition - 100-ply -->
-            <div class="yarn-collection-item">
+            <a href="{{ '/yarns/supreme-edition/' | relative_url }}" class="yarn-collection-item">
                 <img src="{{ '/assets/images/yarn collection pic/100ply-yarn-600x400.png' | relative_url }}" alt="Supreme Edition 100-ply Yarn">
                 <div class="yarn-collection-content">
                     <h3>Supreme Edition</h3>
                     <p class="ply">100-ply</p>
                     <p>The ultimate in cashmere luxury, perfect for the finest and most sophisticated projects.</p>
-                    <a href="{{ '/yarns/supreme-edition/' | relative_url }}" class="btn btn-primary">Explore 100-Ply</a>
                 </div>
-            </div>
+            </a>
         </div>
 
         <!-- Call to Action -->
